<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bukutelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buku_telepon"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/btntambah"
        android:layout_width="129dp"
        android:layout_height="43dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tambah_kontak"
        app:layout_constraintEnd_toStartOf="@+id/btnlihatdaftar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bukutelepon" />

    <Button
        android:id="@+id/btnlihatdaftar"
        android:layout_width="129dp"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:text="@string/lihat_daftar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btntambah"
        app:layout_constraintTop_toBottomOf="@+id/bukutelepon" />

</androidx.constraintlayout.widget.ConstraintLayout>