<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tambahkontak">

    <TextView
        android:id="@+id/tambahkontak"
        android:layout_width="115dp"
        android:layout_height="33dp"
        android:layout_marginStart="173dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="173dp"
        android:text="@string/tmbh_kontak"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nama"
        android:layout_width="301dp"
        android:layout_height="48dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:ems="10"
        android:hint="@string/nama"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tambahkontak" />

    <EditText
        android:id="@+id/notelp"
        android:layout_width="302dp"
        android:layout_height="50dp"
        android:layout_marginStart="57dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="57dp"
        android:ems="10"
        android:hint="@string/nomor_telepon"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nama" />

    <Button
        android:id="@+id/simpan"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="151dp"
        android:text="Simpan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notelp" />
</androidx.constraintlayout.widget.ConstraintLayout>